--- a/package.json
+++ b/package.json
@@ -2,35 +2,39 @@
   "name": "CMS_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.3",
-    "pg": "^8.1.0",
-    "sequelize": "^5.21.8",
-    "sequelize-cli": "^5.5.1"
+  "main": "app.js",
+  "bin": {
+    "CMS_server": "server.js"
   },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "jest": "^26.0.1",
-    "supertest": "^4.0.2"
+  "directories": {
+    "test": "test"
   },
   "scripts": {
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "dev": "nodemon bin/server.js"
+    "dev": "NODE_ENV=development nodemon app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elixir-fox-mcc-05/CMS_server.git"
+    "url": "git+https://github.com/kalyskhairy/CMS_server.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/elixir-fox-mcc-05/CMS_server/issues"
+    "url": "https://github.com/kalyskhairy/CMS_server/issues"
   },
-  "homepage": "https://github.com/elixir-fox-mcc-05/CMS_server#readme"
+  "homepage": "https://github.com/kalyskhairy/CMS_server#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.1.0",
+    "sequelize": "^5.21.8"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "jest": "^26.0.1",
+    "supertest": "^4.0.2"
+  }
 }
