--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "set NODE_ENV=test&&jest --detectOpenHandles"
+    "test": "NODE_ENV=test cls && jest --detectOpenHandles --runInBand",
+    "resetdb:test": "NODE_ENV=test sequelize db:migrate:undo:all && sequelize db:migrate",
+    "resetdb:dev": "NODE_ENV=dev sequelize db:migrate:undo:all && sequelize db:migrate",
+    "dev": "NODE_ENV=development nodemon ./bin/server.js"
   },
   "repository": {
     "type": "git",
