--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./bin/http.js",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --verbose"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "jest": "^26.0.1",
+    "sinon": "^9.0.2",
     "supertest": "^4.0.2"
   }
 }
