--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --runInBand",
     "start": "node app.js"
   },
   "repository": {
@@ -26,10 +26,15 @@
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
-    "sequelize": "^5.21.8"
+    "proxyquire": "^2.1.3",
+    "sequelize": "^5.21.8",
+    "superagent": "^5.2.2"
   },
   "devDependencies": {
+    "dupertest": "^1.0.2",
     "jest": "^26.0.1",
+    "mock-req-res": "^1.1.4",
+    "nock": "^12.0.3",
     "supertest": "^4.0.2"
   }
 }
