--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "localstart": "set NODE_ENV=development&&nodemon app.js",
+    "dev": "set NODE_ENV=development&&nodemon ./bin/http.js",
     "test": "set NODE_ENV=test&&jest --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
