--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "jest": "^26.0.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "watchman": "^1.0.0"
   }
 }
