--- a/config/config.json
+++ b/config/config.json
@@ -8,12 +8,12 @@
     "operatorsAliases": false
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
+    "username": "postgres",
+    "password": "trafalgar9",
+    "database": "db-cms-test",
     "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
     "username": "root",
