--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "set NODE_ENV = dev && nodemon app.js"
+    "test": "set NODE_ENV=test&&jest --detectOpenHandles --runInBand --verbose",
+    "dev" : "set NODE_ENV=test&& sequelize db:seed:all",
+    "start": "set NODE_ENV = dev && nodemon bin/server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,8 @@
     "sequelize": "^5.21.8"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "jest": "^26.0.1",
+    "supertest": "^4.0.2"
   }
 }
