--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "NODE_ENV=test jest --detectOpenHandles",
-    "dev": "NODE_ENV=development nodemon app.js"
+    "test": "NODE_ENV=test jest --detectOpenHandles --runInBand --verbose",
+    "dev": "NODE_ENV=development nodemon ./bin/server.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.3",
     "pg": "^8.1.0",
     "sequelize": "^5.21.8"
   },
