--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "set NODE_ENV=test&&jest --detectOpenHandles",
     "dev": "set NODE_ENV=development&&nodemon bin/server.js"
   },
   "repository": {
