--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,8 @@
     "password": "empatpuluh6",
     "database": "cms_database_test",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
     "username": "root",
