--- a/config/config.json
+++ b/config/config.json
@@ -2,14 +2,14 @@
   "development": {
     "username": "postgres",
     "password": "admin",
-    "database": "database_development",
+    "database": "ecommerce_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "admin",
-    "database": "database_test",
+    "database": "ecommerce_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
