--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "scripts": {
     "test": "NODE_ENV=test cls && jest --detectOpenHandles --runInBand",
-    "resetdb:test": "NODE_ENV=test sequelize db:migrate:undo:all && sequelize db:migrate",
-    "resetdb:dev": "NODE_ENV=dev sequelize db:migrate:undo:all && sequelize db:migrate",
+    "undo:test": "NODE_ENV=test sequelize db:migrate:undo:all",
+    "migrate:test": "NODE_ENV=test sequelize db:migrate",
+    "seed:test": "NODE_ENV=test sequelize db:seed:all",
+    "test:all": "npm run undo:test && npm run migrate:test && npm run seed:test && npm run test",
     "dev": "NODE_ENV=development nodemon ./bin/server.js"
   },
   "repository": {
