--- a/config/config.json
+++ b/config/config.json
@@ -5,6 +5,7 @@
     "database": "cms_server",
     "host": "127.0.0.1",
     "dialect": "postgres",
+    "logging": false,
     "operatorsAliases": false
   },
   "test": {
@@ -13,6 +14,7 @@
     "database": "cms_server",
     "host": "127.0.0.1",
     "dialect": "postgres",
+    "logging": false,
     "operatorsAliases": false
   },
   "production": {
