--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemon": "^2.0.3",
     "pg": "^8.1.0",
     "proxyquire": "^2.1.3",
     "sequelize": "^5.21.8",
