--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --verbose --coverage",
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
     "dev": "NODE_ENV=development nodemon ./bin/http.js"
   },
   "repository": {
