--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/HafidhFinand/CMS_server#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
     "sequelize": "^5.21.8"
