--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.8",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
