--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "dev": "NODE_ENV=development nodemon ./bin/server.js"
   },
   "repository": {
