--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.4.6",
     "pg": "^8.0.2",
     "sequelize": "^5.21.6",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "vue-graph": "^0.8.7"
   }
 }
