--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "set NODE_ENV=test&&jest --detectOpenHandles",
-    "dev": "set NODE_ENV=development&&nodemon bin/server.js"
+    "dev": "set NODE_ENV=development&&nodemon bin/server.js",
+    "start": "node bin/server.js"
   },
   "repository": {
     "type": "git",
