--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "SET NODE_ENV=test && jest --coverage --runInBand --detectOpenHandles --verbose",
     "dev": "SET NODE_ENV=development && nodemon ./bin/http.js",
-    "start": "node app.js"
+    "start": "node ./bin/http.js"
   },
   "repository": {
     "type": "git",
