--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "set NODE_ENV=development&&nodemon ./bin/http.js",
-    "test": "set NODE_ENV=test&&jest --runInBand --detectOpenHandles --forceExit"
+    "test": "set NODE_ENV=test&&sequelize db:migrate:undo:all&&sequelize db:migrate&&sequelize db:migrate&&jest --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
