--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "engines": {
     "node": "12.14.1"
   },
+  "heroku-postbuild": "npm install --production",
   "main": "app.js",
   "scripts": {
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
