--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.3",
     "pg": "^8.1.0",
     "proxyquire": "^2.1.3",
     "sequelize": "^5.21.8",
+    "sequelize-cli": "^5.5.1",
     "superagent": "^5.2.2"
   },
   "devDependencies": {
