--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon bin/server.js",
-    "test": "cls && jest --detectOpenHandles"
+    "test": "cls && jest --detectOpenHandles --runInBand",
+    "start": "node app.js"
   },
   "author": "AndreRGunawan",
   "license": "ISC",
