--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "montest": "NODE_ENV=test nodemon ./bin/http.js",
-    "ftest": "NODE_ENV=test jest  --detectOpenHandles --runInBand --forceExit",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest  --detectOpenHandles --runInBand --forceExit",
+    "ftest": "NODE_ENV=test jest",
     "dev" : "nodemon ./bin/http.js"
   },
   "repository": {
