--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,6 @@
 		"dialect": "postgres"
 	},
 	"production": {
-		"username": "postgres",
-		"password": "123",
-		"database": "database_production_cms",
-		"host": "127.0.0.1",
-		"dialect": "postgres"
+		"use_env_variable": "DATABASE_URL"
 	}
 }
