--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "SET NODE_ENV=development nodemon bin/server.js",
+    "dev": "SET NODE_ENV=development&&nodemon bin/server.js",
     "test": "SET NODE_ENV=test&&jest --detectOpenHandles"
   },
   "repository": {
@@ -24,10 +24,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.14.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.8",
+    "vue": "^2.6.11"
   }
 }
