--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon bin/server.js",
+    "dev": "NODE_ENV=development nodemon app.js",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "start": "node bin/server.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
