--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "app.js",
   "scripts": {
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles",
-    "dev": "NODE_ENV=development nodemon ./bin/http.js",
+    "dev": "NODE_ENV=development nodemon app.js",
     "start": "node app.js"
   },
   "repository": {
