--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node ./bin/http.js",
+    "start": "node ./bin/http.js",
     "montest": "NODE_ENV=test nodemon ./bin/http.js",
     "test": "NODE_ENV=test jest  --detectOpenHandles --runInBand --forceExit",
     "ftest": "NODE_ENV=test jest",
-    "dev" : "nodemon ./bin/http.js"
+    "dev": "nodemon ./bin/http.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,8 @@
   "homepage": "https://github.com/SackingSand/CMS_server#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
