--- a/config/config.json
+++ b/config/config.json
@@ -16,11 +16,6 @@
     "logging": false
   },
   "production": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "ecommerce_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres",
-    "operatorsAliases": false
+    "use_env_variable" : "DATABASE_URL"
   }
 }
