--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "dev": "NODE_ENV=development nodemon ./bin/server.js"
+    "dev": "NODE_ENV=development nodemon ./bin/server.js",
+    "start": "node bin/server.js"
   },
   "repository": {
     "type": "git",
