--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./bin/http.js",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
-    "start": "node app.js"
+    "start": "node ./bin/http.js"
   },
   "repository": {
     "type": "git",
@@ -26,10 +26,10 @@
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
+    "dotenv": "^8.2.0",
     "sequelize": "^5.21.8"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
     "jest": "^26.0.1",
     "supertest": "^4.0.2"
   }
