--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.8",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "jest": "^26.0.1",
