--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/http.js",
     "dev": "set NODE_ENV=development&&nodemon ./bin/http.js",
-    "test": "set NODE_ENV=test&&sequelize db:migrate:undo:all&&sequelize db:migrate&&sequelize db:migrate&&jest --runInBand --detectOpenHandles --forceExit"
+    "test": "set NODE_ENV=test&&sequelize db:migrate:undo:all&&sequelize db:migrate&&jest --runInBand --detectOpenHandles --forceExit"
   },
   "repository": {
     "type": "git",
