--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   },
   "homepage": "https://github.com/HafidhFinand/CMS_server#readme",
   "dependencies": {
+    "aws-sdk": "^2.683.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.1.0",
-    "dotenv": "^8.2.0",
     "sequelize": "^5.21.8"
   },
   "devDependencies": {
