--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.4.6",
     "pg": "^8.1.0",
     "sequelize": "^5.21.8",
     "vue": "^2.6.11"
