--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.1.0",
-    "sequelize": "^5.21.8"
+    "sequelize": "^5.21.8",
+    "stripe": "^8.56.0"
   },
   "devDependencies": {
     "jest": "^26.0.1",
