--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.0.0",
+    "imgur": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.1.0",
     "sequelize": "^5.21.8",
     "sequelize-cli": "^5.5.1"
