--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,8 @@
 		"password": "123",
 		"database": "database_test_cms",
 		"host": "127.0.0.1",
-		"dialect": "postgres"
+		"dialect": "postgres",
+        "logging": false
 	},
 	"production": {
 		"use_env_variable": "DATABASE_URL"
