--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "set NODE_ENV=development&& nodemon bin/server.js",
-    "test": "set NODE_ENV=test && clear && jest --runInBand --detectOpenHandles --verbose",
-    "start": "node app.js"
+    "test": "set NODE_ENV=test&& clear && jest --runInBand --detectOpenHandles --verbose",
+    "start": "node bin/server.js"
   },
   "repository": {
     "type": "git",
