--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "set NODE_ENV=test&&jest --detectOpenHandles --runInBand --verbose",
-    "dev": "set NODE_ENV=test&& sequelize db:seed:all",
+    "test": "set NODE_ENV=test&&jest --detectOpenHandles --runInBand --verbose --forceExit",
+    "dev": "set NODE_ENV=test&& sequelize db:migrate",
     "start": "node bin/server.js"
   },
   "repository": {
