--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "dev": "nodemon bin/server.js"
+    "dev": "set NODE_ENV=development&&nodemon bin/server.js"
   },
   "repository": {
     "type": "git",
