--- a/config/config.json
+++ b/config/config.json
@@ -15,10 +15,6 @@
     "logging": false
   },
   "production": {
-    "username": "postgres",
-    "password": "admin",
-    "database": "database_production_eCommerce",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
   }
 }
