--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "test": "NODE_ENV=test jest --detectOpenHandles --runInBand --verbose",
-    "dev": "NODE_ENV=development nodemon ./bin/server.js"
+    "dev": "NODE_ENV=development nodemon ./bin/server.js",
+    "start": "node ./bin/server.js"
   },
   "repository": {
     "type": "git",
