--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./bin/http.js",
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --verbose"
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
+    "start": "node ./bin/http.js"
   },
   "repository": {
     "type": "git",
