--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./bin/server.js",
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --verbose",
-    "start": "node ./bin/server.js"
+    "start": "node bin/server.js"
   },
   "repository": {
     "type": "git",
